Bug 153659 - FILEOPEN DOCX Table of Figures entry has incorrect paragraph style
Summary: FILEOPEN DOCX Table of Figures entry has incorrect paragraph style
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.4 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0
Keywords:
Depends on:
Blocks: DOCX-TableofContents
  Show dependency treegraph
 
Reported: 2023-02-16 08:56 UTC by Gabor Kelemen (Collabora)
Modified: 2023-03-24 14:07 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
The example file in Word 2016 and Writer (165.63 KB, image/png)
2023-02-16 08:56 UTC, Gabor Kelemen (Collabora)
Details
After update, the para style is changed and its spacing is visibly larger (163.75 KB, image/png)
2023-02-16 08:56 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-02-16 08:56:13 UTC
Created attachment 185393 [details]
The example file in Word 2016 and Writer

This is followup to bug 153090

When attachment 184745 [details] is opened in Writer, the paragraphs in the ToF get the "table of figures" paragraph style. In Word, it is called "Table of Figures".
This is incorrect, because updating the ToF changes this to the built-in "Figure Index 1" style, which looks different (has 0.28 cm spacing after set).

1. Open attachment 184745 [details] 
2. Click in the ToF, observe its paragraph style
3. Right click the ToF, Update Index.
-> There is more spacing after the entries of the ToF

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 14a36ad49518bcb5b606b0f1640e3ca56b636e89
CPU threads: 14; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: threaded
This started in 4.3, when the contents of the ToF were first imported. Before that the field was empty.
Comment 1 Gabor Kelemen (Collabora) 2023-02-16 08:56:55 UTC
Created attachment 185394 [details]
After update, the para style is changed and its spacing is visibly larger
Comment 2 Gabor Kelemen (Collabora) 2023-02-16 09:01:15 UTC
Similar to bug 143722
Comment 3 stragu 2023-03-02 08:03:01 UTC
Confirmed in:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 03f58d6af52bab05545833980cca835a3df0949a
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded
Comment 4 Commit Notification 2023-03-22 20:05:14 UTC
Gabor Kelemen committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9b89ce887836742bb84bf57afa3b536b6c3bb1c1

tdf#153659 Import Table of Figures paragraph style correctly

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.