tdf#153659 Import Table of Figures paragraph style correctly

Change-Id: I5a995349c168bfbb5c8933dafa72e06eddb74ac6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149257
Tested-by: Jenkins
Reviewed-by: Gabor Kelemen <kelemeng@ubuntu.com>